--- a/app_vite_demo/index.css
+++ b/app_vite_demo/index.css
@@ -22,3 +22,11 @@ body {
 h1 {
     @apply text-3xl font-bold;
 }
+
+.button {
+    @apply px-4 py-2 rounded-lg bg-blue-500 text-white m-1;
+}
+
+.button:hover {
+    @apply bg-blue-700;
+}
